--- a/trunk/src/ayuda/introduccion.htm
+++ b/trunk/src/ayuda/introduccion.htm
@@ -18,7 +18,7 @@
       </font>
     </td>
   </tr></table>
-<hr><div align="justify"><font face="TimesNewRomanPSMT"  color="#010101"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#010101">Este documento recoge el manual de usuario de la aplicaci&oacute;n &ldquo;JIM&rdquo; un cliente de 
+<hr><div align="justify"><font face="TimesNewRomanPSMT"  color="#010101"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#010101">Este documento recoge el manual de usuario de la aplicaci&oacute;n &ldquo;JAJIM&rdquo; un cliente de
 menasajer&iacute;a instant&aacute;nea basado en Jabber.</span></font></div><div align="justify"><font face="TimesNewRomanPSMT"  color="#010101"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#010101"><br></span></font></div><div align="justify"><font face="TimesNewRomanPSMT"  color="#010101"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#010101">En los siguientes apartados se detallan el proceso de instalaci&oacute;n de la aplicaci&oacute;n 
 y el acceso a la completa funcionalidad de la misma. La organizaci&oacute;n del 
 documento se ha realizado con arreglo a las diferentes &aacute;reas de trabajo 
@@ -28,6 +28,6 @@ a la misma. Posteriormente, se describe como se trabaja con cuentas Jabber
 dentro del sistema, para pasar despu&eacute;s a comentar c&oacute;mo realizar conexiones 
 con servidores. A continuaci&oacute;n, se habla de la funcionalidad de la gesti&oacute;n de 
 contactos, junto con la utilizaci&oacute;n de conversaciones. Finalmente se detalla como 
-trabajar con las transferencias de ficheros dentro del sistema JIM.</span></font></div><div align="left">&nbsp;&nbsp;</div>
+trabajar con las transferencias de ficheros dentro del sistema JAJIM.</span></font></div><div align="left">&nbsp;&nbsp;</div>
 
 </body></html>
