Añadida ruta para que los ficheros html puedan recuperar las imagenes desde el jar.

--- a/trunk/src/ayuda/ingles/cancel-file-transfer.htm
+++ b/trunk/src/ayuda/ingles/cancel-file-transfer.htm
@@ -19,7 +19,7 @@
     </td>
   </tr></table>
 <hr><div align="justify"><font face="TimesNewRomanPSMT"  color="#010101"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#010101">This option is available in transfer manager, in a button next to file transfer. There 
-is a button for each file transfer.</span></font></div><div align="justify"><font face="TimesNewRomanPSMT"  color="#010101"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#010101"><br></span></font></div><div align="center"><img src="cancel-file-transferb1.PNG"  border="0"  alt="graphic"></div><div align="left"><font face="TimesNewRomanPSMT"  color="#010101"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#010101"><br></span></font></div><div align="left"><font face="TimesNewRomanPSMT"  color="#010101"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#010101">If user selects this button, system cancels file transfer and it deletes it from 
+is a button for each file transfer.</span></font></div><div align="justify"><font face="TimesNewRomanPSMT"  color="#010101"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#010101"><br></span></font></div><div align="center"><img src="jar:file:JAJIM.jar!/ayuda/ingles/cancel-file-transferb1.PNG"  border="0"  alt="graphic"></div><div align="left"><font face="TimesNewRomanPSMT"  color="#010101"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#010101"><br></span></font></div><div align="left"><font face="TimesNewRomanPSMT"  color="#010101"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#010101">If user selects this button, system cancels file transfer and it deletes it from
 transfer list.</span></font></div>
 
 </body></html>
