--- a/trunk/src/ayuda/ingles/delete-requested-contact.htm
+++ b/trunk/src/ayuda/ingles/delete-requested-contact.htm
@@ -20,6 +20,6 @@
   </tr></table>
 <hr><div align="justify"><font face="TimesNewRomanPSMT"  color="#010101"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#010101">When a contact, to whom we have send a contact request, reject this request; 
 system shows a popup window with this information and deletes that contact of 
-the roster.</span></font></div><div align="justify"><font face="TimesNewRomanPSMT"  color="#010101"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#010101"><br></span></font></div><div align="center"><img src="delete-requested-contactb1.PNG"  border="0"  alt="graphic"></div><div align="left">&nbsp;&nbsp;</div>
+the roster.</span></font></div><div align="justify"><font face="TimesNewRomanPSMT"  color="#010101"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#010101"><br></span></font></div><div align="center"><img src="jar:file:JAJIM.jar!/ayuda/ingles/delete-requested-contactb1.PNG"  border="0"  alt="graphic"></div><div align="left">&nbsp;&nbsp;</div>
 
 </body></html>
