--- a/trunk/src/ayuda/ingles/received-instant-message.htm
+++ b/trunk/src/ayuda/ingles/received-instant-message.htm
@@ -19,6 +19,6 @@
     </td>
   </tr></table>
 <hr><div align="justify"><font face="TimesNewRomanPSMT"  color="#010101"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#010101">When system detects that a message has been received, it takes this message 
-and shows it in conversation window.</span></font></div><div align="justify"><font face="TimesNewRomanPSMT"  color="#010101"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#010101"><br></span></font></div><div align="center"><img src="received-instant-messageb1.PNG"  border="0"  alt="graphic"></div>
+and shows it in conversation window.</span></font></div><div align="justify"><font face="TimesNewRomanPSMT"  color="#010101"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#010101"><br></span></font></div><div align="center"><img src="jar:file:JAJIM.jar!/ayuda/ingles/received-instant-messageb1.PNG"  border="0"  alt="graphic"></div>
 
 </body></html>
