--- a/trunk/src/ayuda/ingles/send-instant-message.htm
+++ b/trunk/src/ayuda/ingles/send-instant-message.htm
@@ -20,6 +20,6 @@
   </tr></table>
 <hr><div align="justify"><font face="TimesNewRomanPSMT"  color="#010101"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#010101">If a user want to send a message in a conversation, he must put content 
 message in text area that it is in left bottom corner of the conversation window. 
-Then, he must click in &quot;Send&quot; button or pulse &quot;ENTER&quot;.</span></font></div><div align="justify"><font face="TimesNewRomanPSMT"  color="#010101"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#010101"><br></span></font></div><div align="center"><img src="send-instant-messageb1.PNG"  border="0"  alt="graphic"></div><div align="left"><font face="Arial"  color="#010101"  size="2"><span style=" font-size:10pt; font-family:Arial; color:#010101"><br></span></font></div><div align="left">&nbsp;&nbsp;</div>
+Then, he must click in &quot;Send&quot; button or pulse &quot;ENTER&quot;.</span></font></div><div align="justify"><font face="TimesNewRomanPSMT"  color="#010101"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#010101"><br></span></font></div><div align="center"><img src="jar:file:JAJIM.jar!/ayuda/ingles/send-instant-messageb1.PNG"  border="0"  alt="graphic"></div><div align="left"><font face="Arial"  color="#010101"  size="2"><span style=" font-size:10pt; font-family:Arial; color:#010101"><br></span></font></div><div align="left">&nbsp;&nbsp;</div>
 
 </body></html>
