--- a/trunk/src/ayuda/ingles/delete-contact.htm
+++ b/trunk/src/ayuda/ingles/delete-contact.htm
@@ -19,7 +19,7 @@
     </td>
   </tr></table>
 <hr><div align="justify"><font face="TimesNewRomanPSMT"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#000000">For delete a contact, you must go to contacts panel and select contact that you 
-want to delete with mouse's secondary button. This action opens a popup menu.</span></font></div><div align="justify"><font face="TimesNewRomanPSMT"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#000000"><br></span></font></div><div align="center"><img src="delete-contactb1.PNG"  border="0"  alt="graphic"></div><div align="center"><font face="TimesNewRomanPSMT"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#000000"><br></span></font></div><div align="left"><font face="TimesNewRomanPSMT"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#000000">If user selects option &quot;Delete contact&quot;, system removes contact of contacts list 
+want to delete with mouse's secondary button. This action opens a popup menu.</span></font></div><div align="justify"><font face="TimesNewRomanPSMT"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#000000"><br></span></font></div><div align="center"><img src="jar:file:JAJIM.jar!/ayuda/ingles/delete-contactb1.PNG"  border="0"  alt="graphic"></div><div align="center"><font face="TimesNewRomanPSMT"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#000000"><br></span></font></div><div align="left"><font face="TimesNewRomanPSMT"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#000000">If user selects option &quot;Delete contact&quot;, system removes contact of contacts list
 and it sends notification to deleted contact.</span></font></div>
 
 </body></html>
