--- a/trunk/src/ayuda/ingles/validate-contact.htm
+++ b/trunk/src/ayuda/ingles/validate-contact.htm
@@ -19,6 +19,6 @@
     </td>
   </tr></table>
 <hr><div align="justify"><font face="TimesNewRomanPSMT"  color="#010101"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#010101">System shows a popup window in which it report that contact request have been 
-accepted by other user. If user clicks in window, it is closed.</span></font></div><div align="justify"><font face="TimesNewRomanPSMT"  color="#010101"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#010101"><br></span></font></div><div align="center"><img src="validate-contactb1.PNG"  border="0"  alt="graphic"></div><div align="left">&nbsp;&nbsp;</div>
+accepted by other user. If user clicks in window, it is closed.</span></font></div><div align="justify"><font face="TimesNewRomanPSMT"  color="#010101"><span style=" font-size:12pt; font-family:TimesNewRomanPSMT; color:#010101"><br></span></font></div><div align="center"><img src="jar:file:JAJIM.jar!/ayuda/ingles/validate-contactb1.PNG"  border="0"  alt="graphic"></div><div align="left">&nbsp;&nbsp;</div>
 
 </body></html>
